# qsnake

./: .clang-format  .gitignore  CMakeLists.txt  README.md  qsnake.c
src/: agent.c  game.c  input.c  main.c  settings.h  snake.c  state.c  state.h  update.c
src/headers/: agent.h  game.h  settings.h  snake.h  state.h
